meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__syslog__tests__kernel_panic_rfc_3164.snap
---
source: memfaultd/src/logs/syslog.rs
expression: entry
snapshot_kind: text
---
{
  "ts": "test",
  "data": {
    "MESSAGE": "Kernel panic detected!!",
    "_SYSTEMD_UNIT": "kernel",
    "PRIORITY": "5"
  }
}
