meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__syslog__tests__system_started_rfc_3164.snap
---
source: memfaultd/src/logs/syslog.rs
expression: entry
snapshot_kind: text
---
{
  "ts": "test",
  "data": {
    "MESSAGE": "System started",
    "_PID": "1234",
    "_SYSTEMD_UNIT": "systemd",
    "PRIORITY": "2"
  }
}
